# Kakuro

./: CMakeLists.txt  LICENSE  README.md
Kakuro/: Application.cpp  Application.h  Cell.cpp  Cell.h  CellSumTest.cpp  CellSumTest.h  CoordianateSystem.h  Definitions.h  InputLine.cpp  InputLine.h  Label.h  Line.cpp  Line.h  MainWidget.cpp  MainWidget.h  Orientation.h  Point.cpp  Point.h  Puzzle.cpp  Puzzle.h  PuzzleDelegate.cpp  PuzzleDelegate.h  PuzzleItemData.h  PuzzleModel.cpp  PuzzleModel.h  Size.cpp  Size.h  main.cpp  mainwidget.ui
data/: 13x13_01.csv  4x4_01.csv  9x8_01.csv
